--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-data": "^3.4"
     },
     "require-dev": {
@@ -47,6 +48,12 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "phpstan": [
+            "vendor/bin/phpstan analyse -c phpstan.neon"
+        ],
+        "pint": [
+            "vendor/bin/pint"
         ]
     },
     "extra": {
