--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "spatie/laravel-activitylog": "^4.7",
-        "spatie/laravel-data": "^3.4"
+        "spatie/laravel-data": "^3.4",
+        "spatie/laravel-query-builder": "^5.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
